--- a/home/dot_config/kitty/kitty.conf
+++ b/home/dot_config/kitty/kitty.conf
@@ -6,7 +6,7 @@ Fonts {{{
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-# font_family      monospace
+font_family      FiraCode Nerd Font Mono
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
