fix(kitty): disable sudo shell integration
This fixes an issue with running yabai --load-sa

--- a/home/dot_config/kitty/kitty.conf
+++ b/home/dot_config/kitty/kitty.conf
@@ -1506,6 +1506,7 @@ hide_window_decorations titlebar-only
 #: link when clicked.
 
 # shell_integration enabled
+shell_integration no-sudo
 
 #: Enable shell integration on supported shells. This enables features
 #: such as jumping to previous prompts, browsing the output of the
