feat(lazygit): add delta as pager

--- a/home/dot_config/lazygit/config.yml
+++ b/home/dot_config/lazygit/config.yml
@@ -18,3 +18,7 @@ customCommands:
     context: "files"
     loadingText: "opening czg commit tool"
     subprocess: true
+git:
+  paging:
+    colorArg: always
+    pager: delta --dark --paging=never
