feat(kitty): make kitty config file a symlink

--- a/home/kitty.conf
+++ b/home/kitty.conf
@@ -1290,9 +1290,9 @@ hide_window_decorations titlebar-only
 
 #: }}}
 
-#: Advanced {{{
+Advanced {{{
 
-# shell .
+shell /opt/homebrew/bin/fish --login --interactive
 
 #: The shell program to execute. The default value of . means to use
 #: whatever shell is set as the default shell for the current user.
@@ -1633,7 +1633,7 @@ shell_integration no-sudo
 #: an "Actions" menu in the macOS global menubar. Sub-menus can be
 #: created by adding more levels separated by the :: characters.
 
-#: }}}
+}}}
 
 #: OS specific tweaks {{{
 
