--- a/home/kitty.conf
+++ b/home/kitty.conf
@@ -1750,7 +1750,9 @@ shell_integration no-sudo
 
 #: }}}
 
-#: Keyboard shortcuts {{{
+Keyboard shortcuts {{{
+
+map ctrl+l combine : clear_terminal scroll active : send_text normal,application \x0c
 
 #: Keys are identified simply by their lowercase Unicode characters.
 #: For example: a for the A key, [ for the left square bracket key,
@@ -1856,7 +1858,7 @@ shell_integration no-sudo
 
 #::      map kitty_mod+y new_window less @selection
 
-#: }}}
+}}}
 
 #: Scrolling {{{
 
