chore(nvim): ignore lazy lockfile
I just don't see the benefit of keeping this file versioned.

--- a/home/.chezmoiignore
+++ b/home/.chezmoiignore
@@ -1,7 +1,7 @@
 lazyvim.json
-lazy-lock.json
 fish_variables
 kitty.conf
 .config/fish/completions/
 .config/nvim/spell/
+.config/nvim/lazy-lock.json
 .config/fish/*/nvm.fish
