feat(kitty): ignore ctrl+l mapping when in nvim
This was amended to remove the mapping in kitty for now, although it
would be good to revisit.

--- a/home/kitty.conf
+++ b/home/kitty.conf
@@ -1752,7 +1752,8 @@ shell_integration no-sudo
 
 Keyboard shortcuts {{{
 
-map ctrl+l combine : clear_terminal scroll active : send_text normal,application \x0c
+# map ctrl+l combine : clear_terminal scroll active : send_text normal,application \x0c
+# map --when-focus-on var:in_editor ctrl+l
 
 #: Keys are identified simply by their lowercase Unicode characters.
 #: For example: a for the A key, [ for the left square bracket key,
