fix(kitty): decrease font size steps on zoom

--- a/home/kitty.conf
+++ b/home/kitty.conf
@@ -6,7 +6,7 @@ Fonts {{{
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      FiraCode Nerd Font Mono
+font_family      FiraCode Nerd Font Mono Retina
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
@@ -246,7 +246,7 @@ disable_ligatures cursor
 #: problem try setting text_fg_override_threshold to 0 to see if this
 #: is the cause of the problem.
 
-}}}
+# }}}
 
 #: Cursor customization {{{
 
@@ -774,7 +774,7 @@ disable_ligatures cursor
 
 #: }}}
 
-Window layout {{{
+# Window layout {{{
 
 # remember_window_size  yes
 # initial_window_width  640
@@ -954,7 +954,7 @@ hide_window_decorations titlebar-only
 #: want confirmation when closing individual windows, you can map the
 #: close_window_with_confirmation action.
 
-}}}
+# }}}
 
 #: Tab bar {{{
 
@@ -1290,7 +1290,7 @@ hide_window_decorations titlebar-only
 
 #: }}}
 
-Advanced {{{
+# Advanced {{{
 
 shell /opt/homebrew/bin/fish --login --interactive
 
@@ -1633,7 +1633,7 @@ shell_integration no-sudo
 #: an "Actions" menu in the macOS global menubar. Sub-menus can be
 #: created by adding more levels separated by the :: characters.
 
-}}}
+# }}}
 
 #: OS specific tweaks {{{
 
@@ -1750,7 +1750,7 @@ shell_integration no-sudo
 
 #: }}}
 
-Keyboard shortcuts {{{
+# Keyboard shortcuts {{{
 
 # map ctrl+l combine : clear_terminal scroll active : send_text normal,application \x0c
 # map --when-focus-on var:in_editor ctrl+l
@@ -1859,7 +1859,7 @@ Keyboard shortcuts {{{
 
 #::      map kitty_mod+y new_window less @selection
 
-}}}
+# }}}
 
 #: Scrolling {{{
 
@@ -2183,15 +2183,15 @@ Keyboard shortcuts {{{
 # map kitty_mod+equal  change_font_size all +2.0
 # map kitty_mod+plus   change_font_size all +2.0
 # map kitty_mod+kp_add change_font_size all +2.0
-# map cmd+plus         change_font_size all +2.0
-# map cmd+equal        change_font_size all +2.0
+# map cmd+plus         change_font_size all +1.0
+map cmd+equal        change_font_size all +1.0
 # map shift+cmd+equal  change_font_size all +2.0
 
 #: Decrease font size
 
 # map kitty_mod+minus       change_font_size all -2.0
 # map kitty_mod+kp_subtract change_font_size all -2.0
-# map cmd+minus             change_font_size all -2.0
+map cmd+minus             change_font_size all -1.0
 # map shift+cmd+minus       change_font_size all -2.0
 
 #: Reset font size
