fix(navi): make navi friendly to other machines!
This fixes where I used a full path instead of `~`

--- a/home/dot_config/navi/config.yaml
+++ b/home/dot_config/navi/config.yaml
@@ -20,8 +20,8 @@ finder:
 
 cheats:
   paths:
-    - /Users/luke.scanlan/.local/share/navi/cheats
-    - /Users/luke.scanlan/.config/navi/cheats # on unix-like os
+    - ~/.local/share/navi/cheats
+    - ~/.config/navi/cheats # on unix-like os
 #     - F:\\path\\to\\dir # on Windows
 # path: /path/to/some/dir # (DEPRECATED) equivalent to the --path option
 
