--- a/home/kitty.conf
+++ b/home/kitty.conf
@@ -1,6 +1,6 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
-Fonts {{{
+# Fonts {{{
 
 #: kitty has very powerful font management. You can configure
 #: individual font faces and even specify special fonts for particular
@@ -24,7 +24,7 @@ font_family      FiraCode Nerd Font Mono Retina
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 15.0
+font_size 14.0
 
 #: Font size (in pts)
 
