feat(kitty): add shortcuts for better window layout navigation

--- a/home/kitty.conf
+++ b/home/kitty.conf
@@ -787,7 +787,7 @@ disable_ligatures cursor
 #: suffix of "c" on the width/height values to have them interpreted
 #: as number of cells instead of pixels.
 
-# enabled_layouts *
+enabled_layout splits:split_axis=horizontal stack
 
 #: The enabled window layouts. A comma separated list of layout names.
 #: The special value all means all layouts. The first listed layout
@@ -1777,6 +1777,8 @@ shell_integration no-sudo
 #:     # multi-key shortcuts
 #:     map ctrl+x>ctrl+y>z action
 
+map kitty_mod+z toggle_layout stack
+
 #: The full list of actions that can be mapped to key presses is
 #: available here <https://sw.kovidgoyal.net/kitty/actions/>.
 
@@ -1791,7 +1793,9 @@ shell_integration no-sudo
 #: Remove all shortcut definitions up to this point. Useful, for
 #: instance, to remove the default shortcuts.
 
-# action_alias
+action_alias launch_window_cwd launch --cwd=current
+
+map super+enter launch_window_cwd
 
 #: E.g. action_alias launch_tab launch --type=tab --cwd=current
 
