fix(kitty): make opt+bksp send ctrl+w to programs inside kitty

--- a/home/kitty.conf
+++ b/home/kitty.conf
@@ -1777,6 +1777,8 @@ shell_integration no-sudo
 #:     # multi-key shortcuts
 #:     map ctrl+x>ctrl+y>z action
 
+map alt+backspace send_key ctrl+w
+
 map kitty_mod+z toggle_layout stack
 
 #: The full list of actions that can be mapped to key presses is
