feat(kitty): enable notifications on command finish

--- a/home/kitty.conf
+++ b/home/kitty.conf
@@ -1549,7 +1549,7 @@ shell_integration no-sudo
 #: This option must be a comma separated list of the above values.
 #: Only the first valid match, in the order specified, is sourced.
 
-# notify_on_cmd_finish never
+notify_on_cmd_finish invisible 10 notify
 
 #: Show a desktop notification when a long-running command finishes
 #: (needs shell_integration). The possible values are:
